Cleaned up spacing around latex to make collaboratory parser play nicer

--- a/nb/base-analysis.ipynb
+++ b/nb/base-analysis.ipynb
@@ -16,7 +16,7 @@
     "### Major Changes\n",
     "Since the initial release of this document I have gained new information which changes the interpretation of the provided data.\n",
     "- MIT GSU reports an expected \"total dues\" of $ 1.44\\% $\n",
-    "    - This number does not appear in the constitution of the UE. If one assumes a nominal salary of  $ \\$40,000 $/worker/yr and the minimum national dues are sent this $ 1.44\\% $ works out to  $ \\$15 $/worker/month\n",
+    "    - This number does not appear in the constitution of the UE. If one assumes a nominal salary of  $ \\$40,000 $ /worker/yr and the minimum national dues are sent this $ 1.44\\% $ works out to  $ \\$15 $ /worker/month\n",
     "- The entire graduate population will not be allowed to participate in a union because some of them pay tuition. A more reasonable choice in nominal union membership (`mit_grad_pop`) is $ 5000 $, not $ 6900 $.\n",
     "- As the purpose of this document is no longer to stand alone I have removed the \"Major Results\" Section and leave the results and discussion to the individual sections.\n",
     "- I removed the pie charts summarizing the financial data from 2018 since this information is entirely contained in the \"last bar\" of each bar graph. These pie charts were made before I had exported all the data required to make the bar graphs."
@@ -366,7 +366,7 @@
    "metadata": {},
    "source": [
     "### Plot Asset Portfolio\n",
-    "Over the last 20 years, the value of the UE assets portfolio has decreased at an average rate of $ \\$0.75 M/yr$ "
+    "Over the last 20 years, the value of the UE assets portfolio has decreased at an average rate of $ \\$0.75 $  M/yr"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "metadata": {},
    "source": [
     "### Plot Receipts Portfolio\n",
-    "The receipts portfolio shows the breakdown of money entering the UE on a yearly basis. By reviewing the \"receipts\" portfolio of the UE one can see that the dips in the asset portfolio are clearly caused by the sale of these investments (rather than a loss of their value). One can also see that over the last 5 years, the amount of money collected in dues has been relatively constant (in 2018 it was $ \\$ 4.35 M $ )."
+    "The receipts portfolio shows the breakdown of money entering the UE on a yearly basis. By reviewing the \"receipts\" portfolio of the UE one can see that the dips in the asset portfolio are clearly caused by the sale of these investments (rather than a loss of their value). One can also see that over the last 5 years, the amount of money collected in dues has been relatively constant (in 2018 it was $ \\$ 4.35 $ M)."
    ]
   },
   {
@@ -639,7 +639,7 @@
     "### UE Membership Distribution\n",
     "This section calculates statistics of the distribution of the size of local UE unions. This quantity is relevant because each local union is given 1 vote per 100 members. This analysis intends to bound the \"extent to which MIT's representation would be diminished by\" because UE has yet to provide this information to us. Diminished here is represented as % change in democratic representation or:\n",
     "\n",
-    "$$ S = \\frac{\\left(\\text{% of Votes}\\right) - \\left(\\text{% of Membership}\\right)}{\\left(\\text{% of Membership}\\right)}$$\n",
+    "$$ S = \\frac{\\left(\\text{% of Votes}\\right) - \\left(\\text{% of Membership}\\right)}{\\left(\\text{% of Membership}\\right)} $$\n",
     "\n",
     "This metric goes to 0 when representation is \"fair\" and goes to -1 (-100%) when MIT would have no voting power. Be aware that the upper bound for this metric is not +1 (+100%) but rather $ \\frac{1-\\left(\\text{% of Membership}\\right)}{\\left(\\text{% of Membership}\\right)} $. Since over-representation is unlikely to occur such an unnatural normalization for this cases is deemed acceptable."
    ]
@@ -927,7 +927,7 @@
     "\n",
     "2) How are votes calculated?\n",
     "- Article 22 Section C of the national constitution states \". The basis of representation shall be one vote for every one hundred members or major fraction thereof.\"\n",
-    "- Such a definition is ambiguous as to what should be done for local unions whose number of members is less than the minimum threshold for a vote ($n_{min} =100$) or at least whose membership is less than a \"major fraction thereof\" ($n_{min}/2 =50$). As I see it there are three reasonable interpretations:\n",
+    "- Such a definition is ambiguous as to what should be done for local unions whose number of members is less than the minimum threshold for a vote ($ n_{min} =100 $) or at least whose membership is less than a \"major fraction thereof\" ($ n_{min}/2 =50 $). As I see it there are three reasonable interpretations:\n",
     "    1) Simple rounding (SIM):  \n",
     "        In this definition we simply give unions which are \"too small\" no votes. This seems highly unlikely to be the actual practice but is included as a \"lower bound\".\n",
     "        $$ n_\\text{votes}\\left(n_\\text{members}\\right) = \\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil $$\n",
@@ -941,8 +941,8 @@
     "        $$ n_\\text{votes}^T = \\sum_{\\text{locals}} n_\\text{votes}\\left(n_\\text{members}\\right) $$\n",
     "    \n",
     "   \n",
-    "    3) Threshold Aggregation ($\\text{TA}_{t}$)  \n",
-    "        This definition does not have a simple per union definition since it explicitly aggregates them. For this definition of rounding unions which are smaller than some threshold $t$ are required to aggregate until they surpass the threshold. The obvious choice for such a threshold is $ t = n_{min}/2 $ since major fractions are already considered sufficient for a vote. One can place an upper bound on the total number of votes which would be present in a pool given such a scheme with:\n",
+    "    3) Threshold Aggregation ($ \\text{TA}_{t} $)  \n",
+    "        This definition does not have a simple per union definition since it explicitly aggregates them. For this definition of rounding unions which are smaller than some threshold $ t $ are required to aggregate until they surpass the threshold. The obvious choice for such a threshold is $ t = n_{min}/2 $ since major fractions are already considered sufficient for a vote. One can place an upper bound on the total number of votes which would be present in a pool given such a scheme with:\n",
     "        $$ n_\\text{votes}^T = \\sum_{\\text{locals}|n_\\text{members}>t} \\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil + \\frac{1}{t}\\sum_{\\text{locals}|n_\\text{members} < t} n_{\\text{members}} $$\n",
     "\n",
     "        "
@@ -1007,37 +1007,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8904887c-46cc-43fa-ac91-7a063a755b5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ax = axs[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "1c4761ef-e0c8-45c5-8c1b-f712edb4327c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(41.503911844255924, 40.396918051447706, 410.1600867170474, 253.35953784149274)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ax.bbox.bounds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
    "id": "e965d19c-0c97-4586-bed6-a5fddd7a9567",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "edeac12e-8936-440e-bd28-1cdb60a6e7b1",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "5eb3e82e-eead-4659-ab36-be4962452369",
    "metadata": {},
    "outputs": [
