Added code to move to the folder containing the notebook since collabratory doesn't start there

--- a/nb/base-analysis.ipynb
+++ b/nb/base-analysis.ipynb
@@ -117,12 +117,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "from cycler import cycler\n",
     "plt.style.use('seaborn')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a98b301f-1eda-4ace-9a69-b97ff3c39224",
+   "metadata": {},
+   "source": [
+    "### Ensure We Begin in the Folder with `base-analysis.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "05e160b1-f3b2-42b9-9f2e-5fef70c92c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_folder(name, path):\n",
+    "    for root, dirs, files in os.walk(path):\n",
+    "        if name in files:\n",
+    "            return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "51570cd1-5b71-47ee-9f24-724e7ad3e34c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(find_folder(\"base-analysis.ipynb\", \"./\"))"
    ]
   },
   {
@@ -138,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "433dd790-078b-46da-b44f-d0bf3aa6cdb9",
    "metadata": {},
    "outputs": [
@@ -219,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d7653919-11f6-4611-a9f8-b8bf141f6f5e",
    "metadata": {},
    "outputs": [],
@@ -242,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "2521f89e-95bd-46b1-baa2-e6c16e65a174",
    "metadata": {},
    "outputs": [],
@@ -302,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "bd43e8d2-d8c9-45c6-8f19-646183786d99",
    "metadata": {},
    "outputs": [],
@@ -314,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "bd5e208d-b700-4cd2-8949-1f00e1d2b622",
    "metadata": {},
    "outputs": [
@@ -370,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "8eae0465-f70c-48d1-9aed-8209bf40b657",
    "metadata": {},
    "outputs": [
@@ -416,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c37fef20-dc54-4268-a752-bd9547bc43c1",
    "metadata": {},
    "outputs": [
@@ -463,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "8efbeb5f-0979-445a-b42e-77cfccfd159b",
    "metadata": {},
    "outputs": [
@@ -510,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "75e74c02-b541-4589-8a8d-d6ae71ab14f6",
    "metadata": {},
    "outputs": [],
@@ -523,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "024b1e46-fb29-473d-921d-fec6acd6766b",
    "metadata": {},
    "outputs": [
@@ -569,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "fe076799-4bbd-482e-ba38-126ddeb503d1",
    "metadata": {
     "tags": []
@@ -617,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "a2106acc-ffe1-46ab-8e97-9a1f6d4a5b75",
    "metadata": {},
    "outputs": [],
@@ -655,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "0e4b2605-dd24-43eb-8eda-744f9133fecd",
    "metadata": {},
    "outputs": [],
@@ -674,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "0478f6ec-c288-4cab-b84b-57ccd3cc94a4",
    "metadata": {},
    "outputs": [],
@@ -685,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "422073b1-1292-49ef-a11c-334deaeace86",
    "metadata": {},
    "outputs": [],
@@ -696,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "6b209ac5-568f-4afd-ab38-ab66ebbc0b45",
    "metadata": {},
    "outputs": [],
@@ -708,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "a1a301df-8b53-4304-b7e2-748a58c343ba",
    "metadata": {
     "tags": []
@@ -733,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "e284917a-855f-4f79-b2cb-0ddfdb7e5323",
    "metadata": {},
    "outputs": [],
@@ -754,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "0e5c11c9-8ea6-4fee-b9fd-8027ff70bc24",
    "metadata": {},
    "outputs": [
@@ -841,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "ed86c051-dc8f-429a-9b08-9651d85157c7",
    "metadata": {},
    "outputs": [
@@ -862,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "b8360bce-51c9-4992-bc08-51608e11e284",
    "metadata": {},
    "outputs": [
@@ -949,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "af08b538-5564-43ad-8323-361b6eb2025c",
    "metadata": {},
    "outputs": [],
@@ -962,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "e6abcf97-0e8f-4146-b453-0867d777aeb5",
    "metadata": {},
    "outputs": [],
@@ -981,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "f9139ec8-c263-4ba4-9ed5-de7c8305065e",
    "metadata": {},
    "outputs": [],
@@ -993,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "6cedb883-46af-4e51-9ede-11029f91d9e1",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "e965d19c-0c97-4586-bed6-a5fddd7a9567",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "edeac12e-8936-440e-bd28-1cdb60a6e7b1",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "5eb3e82e-eead-4659-ab36-be4962452369",
    "metadata": {},
    "outputs": [
