Updated code to fetch raw data files from github if they aren't available locally. This is required for collabratory

--- a/nb/base-analysis.ipynb
+++ b/nb/base-analysis.ipynb
@@ -81,12 +81,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ue_national_assets_filename = \"../data/assets.csv\"\n",
-    "ue_national_liab_filename = \"../data/liabilities.csv\"\n",
-    "ue_national_receipts_filename = \"../data/receipts.csv\"\n",
-    "ue_national_disbursements_filename = \"../data/disbursements.csv\"\n",
-    "ue_all_unions_2018_filename = \"../data/lm_data_data_2018.csv\"\n",
-    "ue_finance_summary_filename = \"../data/summary.csv\"\n",
+    "default_folder = \"../data/\"\n",
+    "ue_national_assets_filename = \"assets.csv\"\n",
+    "ue_national_liab_filename = \"liabilities.csv\"\n",
+    "ue_national_receipts_filename = \"receipts.csv\"\n",
+    "ue_national_disbursements_filename = \"disbursements.csv\"\n",
+    "ue_all_unions_2018_filename = \"lm_data_data_2018.csv\"\n",
+    "ue_finance_summary_filename = \"summary.csv\"\n",
+    "all_files = [ue_national_assets_filename, ue_national_liab_filename,\n",
+    "             ue_national_receipts_filename, ue_national_disbursements_filename,\n",
+    "             ue_all_unions_2018_filename, ue_finance_summary_filename]\n",
     "\n",
     "nominal_yearly_hours = 2000\n",
     "ue_min_for_vote = 100 # [UE national constitution Article 22, Section C]\n",
@@ -118,6 +122,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import requests\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
@@ -131,30 +136,31 @@
    "id": "a98b301f-1eda-4ace-9a69-b97ff3c39224",
    "metadata": {},
    "source": [
-    "### Ensure We Begin in the Folder with `base-analysis.ipynb`"
+    "### Ensure We Have Data Available"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "05e160b1-f3b2-42b9-9f2e-5fef70c92c29",
+   "id": "1ef9ac68-9adf-49c8-a069-ec2e26d3bbb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_folder(name, path):\n",
-    "    for root, dirs, files in os.walk(path):\n",
-    "        if name in files:\n",
-    "            return root"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "51570cd1-5b71-47ee-9f24-724e7ad3e34c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(find_folder(\"base-analysis.ipynb\", \"./\"))"
+    "if os.path.isdir(default_folder):\n",
+    "    base_folder = default_folder\n",
+    "else:\n",
+    "    base_folder = \"./data/\"\n",
+    "    if not os.path.isdir(base_folder):\n",
+    "        os.mkdir(base_folder)\n",
+    "\n",
+    "os.chdir(base_folder)\n",
+    "\n",
+    "if not os.path.isfile(base_folder +  ue_national_assets_filename):\n",
+    "    online_data_source = \"https://raw.githubusercontent.com/UENotForMIT/ue-analysis/master/data/\"\n",
+    "    for file in all_files:\n",
+    "        url = online_data_source + file\n",
+    "        r = requests.get(url, allow_redirects=True)\n",
+    "        open(file, 'wb').write(r.content)"
    ]
   },
   {
@@ -170,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "433dd790-078b-46da-b44f-d0bf3aa6cdb9",
    "metadata": {},
    "outputs": [
@@ -251,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d7653919-11f6-4611-a9f8-b8bf141f6f5e",
    "metadata": {},
    "outputs": [],
@@ -274,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2521f89e-95bd-46b1-baa2-e6c16e65a174",
    "metadata": {},
    "outputs": [],
@@ -334,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bd43e8d2-d8c9-45c6-8f19-646183786d99",
    "metadata": {},
    "outputs": [],
@@ -346,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "bd5e208d-b700-4cd2-8949-1f00e1d2b622",
    "metadata": {},
    "outputs": [
@@ -402,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8eae0465-f70c-48d1-9aed-8209bf40b657",
    "metadata": {},
    "outputs": [
@@ -448,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "c37fef20-dc54-4268-a752-bd9547bc43c1",
    "metadata": {},
    "outputs": [
@@ -495,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "8efbeb5f-0979-445a-b42e-77cfccfd159b",
    "metadata": {},
    "outputs": [
@@ -542,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "75e74c02-b541-4589-8a8d-d6ae71ab14f6",
    "metadata": {},
    "outputs": [],
@@ -555,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "024b1e46-fb29-473d-921d-fec6acd6766b",
    "metadata": {},
    "outputs": [
@@ -593,7 +599,9 @@
   {
    "cell_type": "markdown",
    "id": "edc46612-d073-4d9d-9230-71737abce8e7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Plot Liability Portfolio\n",
     "For the sake of completeness we also present the liability portfolio for the UE. In general, the UE does not take out large loans and pays back their loans quickly."
@@ -601,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "fe076799-4bbd-482e-ba38-126ddeb503d1",
    "metadata": {
     "tags": []
@@ -649,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a2106acc-ffe1-46ab-8e97-9a1f6d4a5b75",
    "metadata": {},
    "outputs": [],
@@ -687,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "0e4b2605-dd24-43eb-8eda-744f9133fecd",
    "metadata": {},
    "outputs": [],
@@ -706,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "0478f6ec-c288-4cab-b84b-57ccd3cc94a4",
    "metadata": {},
    "outputs": [],
@@ -717,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "422073b1-1292-49ef-a11c-334deaeace86",
    "metadata": {},
    "outputs": [],
@@ -728,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "6b209ac5-568f-4afd-ab38-ab66ebbc0b45",
    "metadata": {},
    "outputs": [],
@@ -740,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "a1a301df-8b53-4304-b7e2-748a58c343ba",
    "metadata": {
     "tags": []
@@ -765,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "e284917a-855f-4f79-b2cb-0ddfdb7e5323",
    "metadata": {},
    "outputs": [],
@@ -786,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "0e5c11c9-8ea6-4fee-b9fd-8027ff70bc24",
    "metadata": {},
    "outputs": [
@@ -873,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "ed86c051-dc8f-429a-9b08-9651d85157c7",
    "metadata": {},
    "outputs": [
@@ -894,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "b8360bce-51c9-4992-bc08-51608e11e284",
    "metadata": {},
    "outputs": [
@@ -981,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "af08b538-5564-43ad-8323-361b6eb2025c",
    "metadata": {},
    "outputs": [],
@@ -994,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "e6abcf97-0e8f-4146-b453-0867d777aeb5",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "f9139ec8-c263-4ba4-9ed5-de7c8305065e",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "6cedb883-46af-4e51-9ede-11029f91d9e1",
    "metadata": {},
    "outputs": [],
@@ -1037,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "e965d19c-0c97-4586-bed6-a5fddd7a9567",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "edeac12e-8936-440e-bd28-1cdb60a6e7b1",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "5eb3e82e-eead-4659-ab36-be4962452369",
    "metadata": {},
    "outputs": [
