--- a/nb/base-analysis.ipynb
+++ b/nb/base-analysis.ipynb
@@ -25,7 +25,9 @@
   {
    "cell_type": "markdown",
    "id": "43c1c29d-b3c4-45bb-ab37-7dbc788719fc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Critical Parameters\n",
     "The variables presented in this section are those which I feel are most important to this analysis. In general, any of the variables defined in this notebook could be modified if a more detailed sensitivity analysis was desired."
@@ -35,7 +37,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "67bc1e1e-68a9-4b6a-9db9-e00f01b79f84",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# This is a nominal population which would participate in the union\n",
@@ -78,7 +82,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "30658ef2-178b-4570-a9f5-680e9ab8e241",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "default_folder = \"../data/\"\n",
@@ -118,7 +126,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "89f60092-e2d5-461c-b622-af199ff71f45",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -143,7 +155,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1ef9ac68-9adf-49c8-a069-ec2e26d3bbb8",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "if os.path.isdir(default_folder):\n",
@@ -178,7 +194,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "433dd790-078b-46da-b44f-d0bf3aa6cdb9",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -259,7 +279,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "d7653919-11f6-4611-a9f8-b8bf141f6f5e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "x = plt.get_cmap(\"tab20\")\n",
@@ -282,7 +306,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "2521f89e-95bd-46b1-baa2-e6c16e65a174",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Load Receipts\n",
@@ -342,7 +370,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "bd43e8d2-d8c9-45c6-8f19-646183786d99",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "mit_dues = yearly_hq\n",
@@ -354,7 +386,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "bd5e208d-b700-4cd2-8949-1f00e1d2b622",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -410,7 +446,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "8eae0465-f70c-48d1-9aed-8209bf40b657",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -456,7 +496,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "c37fef20-dc54-4268-a752-bd9547bc43c1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -503,7 +547,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "8efbeb5f-0979-445a-b42e-77cfccfd159b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -550,7 +598,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "75e74c02-b541-4589-8a8d-d6ae71ab14f6",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "df_lt = pd.read_csv(ue_finance_summary_filename)\n",
@@ -563,7 +615,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "024b1e46-fb29-473d-921d-fec6acd6766b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -612,6 +668,9 @@
    "execution_count": 15,
    "id": "fe076799-4bbd-482e-ba38-126ddeb503d1",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -659,7 +718,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "a2106acc-ffe1-46ab-8e97-9a1f6d4a5b75",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "mpl.rcParams['axes.prop_cycle'] = old"
@@ -697,7 +760,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "0e4b2605-dd24-43eb-8eda-744f9133fecd",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "col_union_identifier = \"AFF_ABBR\" # affiliation abbeviation (col to key against 'UE')\n",
@@ -716,7 +783,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "0478f6ec-c288-4cab-b84b-57ccd3cc94a4",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# load data\n",
@@ -727,7 +798,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "422073b1-1292-49ef-a11c-334deaeace86",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# index out UE unions\n",
@@ -738,7 +813,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "6b209ac5-568f-4afd-ab38-ab66ebbc0b45",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# use startswith to index out union type because of trailing spaces\n",
@@ -751,6 +830,9 @@
    "execution_count": 21,
    "id": "a1a301df-8b53-4304-b7e2-748a58c343ba",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -775,7 +857,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "e284917a-855f-4f79-b2cb-0ddfdb7e5323",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "closure_names = [\"local\", \"district\", \"regional\", \"national\"]\n",
@@ -796,7 +882,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "0e5c11c9-8ea6-4fee-b9fd-8027ff70bc24",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -883,7 +973,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "ed86c051-dc8f-429a-9b08-9651d85157c7",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -904,7 +998,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "b8360bce-51c9-4992-bc08-51608e11e284",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -991,7 +1089,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "af08b538-5564-43ad-8323-361b6eb2025c",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "rounding_sim = lambda x: np.round(x)\n",
@@ -1004,7 +1106,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "e6abcf97-0e8f-4146-b453-0867d777aeb5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "df_ue_local = df_ue_local.assign(VOTES_SIM=df_ue_local.apply(lambda x: rounding_sim(x.MEMBERS/ue_min_for_vote), axis=1))\n",
@@ -1023,7 +1129,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "f9139ec8-c263-4ba4-9ed5-de7c8305065e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "members_set = df_ue_local[\"MEMBERS\"].values\n",
@@ -1035,7 +1145,11 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "6cedb883-46af-4e51-9ede-11029f91d9e1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "non_mit_votes = {'sim': df_ue_local[\"VOTES_SIM\"].values.sum() * scale,\n",
@@ -1047,7 +1161,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "e965d19c-0c97-4586-bed6-a5fddd7a9567",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1117,7 +1235,11 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "edeac12e-8936-440e-bd28-1cdb60a6e7b1",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1166,7 +1288,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "5eb3e82e-eead-4659-ab36-be4962452369",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1230,7 +1356,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3731ba69-eb1a-4e5f-8886-f5aefb196913",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
