Updated spacing for the distribution of votes so that it plays nice with collabratory

--- a/nb/base-analysis.ipynb
+++ b/nb/base-analysis.ipynb
@@ -1065,22 +1065,25 @@
     "2) How are votes calculated?\n",
     "- Article 22 Section C of the national constitution states \". The basis of representation shall be one vote for every one hundred members or major fraction thereof.\"\n",
     "- Such a definition is ambiguous as to what should be done for local unions whose number of members is less than the minimum threshold for a vote ($ n_{min} =100 $) or at least whose membership is less than a \"major fraction thereof\" ($ n_{min}/2 =50 $). As I see it there are three reasonable interpretations:\n",
-    "    1) Simple rounding (SIM):  \n",
-    "        In this definition we simply give unions which are \"too small\" no votes. This seems highly unlikely to be the actual practice but is included as a \"lower bound\".\n",
-    "        $$ n_\\text{votes}\\left(n_\\text{members}\\right) = \\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil $$\n",
-    "        $$ n_\\text{votes}^T = \\sum_{\\text{locals}} n_\\text{votes}\\left(n_\\text{members}\\right) $$\n",
     "    \n",
-    "    \n",
-    "    2) At least one rounding (ALO):  \n",
-    "       In this definition unions are given 1 vote until they qualify for more by the traditional rounding scheme. Such a definition strongly over-weights small unions making it unlikely in practice but a reasonable \"upper bound\".\n",
+    "A) **Simple rounding (SIM)**:  \n",
+    "In this definition we simply give unions which are \"too small\" no votes. This seems highly unlikely to be the actual practice but is included as a \"lower bound\".\n",
     "\n",
-    "        $$  n_\\text{votes}\\left(n_\\text{members}\\right)  \\max \\left\\{1,\\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil \\right\\}  $$\n",
-    "        $$ n_\\text{votes}^T = \\sum_{\\text{locals}} n_\\text{votes}\\left(n_\\text{members}\\right) $$\n",
-    "    \n",
+    "$$ n_\\text{votes}\\left(n_\\text{members}\\right) = \\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil $$\n",
+    "        \n",
+    "$$ n_\\text{votes}^T = \\sum_{\\text{locals}} n_\\text{votes}\\left(n_\\text{members}\\right) $$  \n",
+    "\n",
+    "B) **At least one rounding (ALO)**:  \n",
+    "In this definition unions are given 1 vote until they qualify for more by the traditional rounding scheme. Such a definition strongly over-weights small unions making it unlikely in practice but a reasonable \"upper bound\".\n",
+    "\n",
+    "$$  n_\\text{votes}\\left(n_\\text{members}\\right)  \\max \\left\\{1,\\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil \\right\\}  $$\n",
+    "        \n",
+    "$$ n_\\text{votes}^T = \\sum_{\\text{locals}} n_\\text{votes}\\left(n_\\text{members}\\right) $$\n",
     "   \n",
-    "    3) Threshold Aggregation ($ \\text{TA}_{t} $)  \n",
-    "        This definition does not have a simple per union definition since it explicitly aggregates them. For this definition of rounding unions which are smaller than some threshold $ t $ are required to aggregate until they surpass the threshold. The obvious choice for such a threshold is $ t = n_{min}/2 $ since major fractions are already considered sufficient for a vote. One can place an upper bound on the total number of votes which would be present in a pool given such a scheme with:\n",
-    "        $$ n_\\text{votes}^T = \\sum_{\\text{locals}|n_\\text{members}>t} \\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil + \\frac{1}{t}\\sum_{\\text{locals}|n_\\text{members} < t} n_{\\text{members}} $$\n",
+    "C) **Threshold Aggregation ($ \\text{TA}_{t} $)**:  \n",
+    "This definition does not have a simple per union definition since it explicitly aggregates them. For this definition of rounding unions which are smaller than some threshold $ t $ are required to aggregate until they surpass the threshold. The obvious choice for such a threshold is $ t = n_{min}/2 $ since major fractions are already considered sufficient for a vote. One can place an upper bound on the total number of votes which would be present in a pool given such a scheme with:\n",
+    "\n",
+    "$$ n_\\text{votes}^T = \\sum_{\\text{locals}|n_\\text{members}>t} \\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil + \\frac{1}{t}\\sum_{\\text{locals}|n_\\text{members} < t} n_{\\text{members}} $$\n",
     "\n",
     "        "
    ]
