Added open in colab shield

--- a/nb/base-analysis.ipynb
+++ b/nb/base-analysis.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "# Numerical Analysis of the UE and MIT GSU\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/UENotForMIT/ue-analysis/blob/master/nb/base-analysis.ipynb)  \n",
     "This notebook contains a series of analyses on practical implementation details associated with MIT graduate students joining the UE. The purpose of this document is not to argue for or against such an action but rather to concisely answer numerical questions  which were not easily verifiable previously. This notebook was written by one of the authors ([Rohan Kadambi](mailto:kadambi@mit.edu)) of https://uenotformit.org and is hosted on a GitHub repo as a part of that organization's [GitHub](https://github.com/UENotForMIT). \n",
     "\n",
     "Most of the data on UE used in this report come from the US Department of Labor Office of Labor-Management Standards Reporting which can be found here:\n",
@@ -1076,7 +1077,7 @@
     "B) **At least one rounding (ALO)**:  \n",
     "In this definition unions are given 1 vote until they qualify for more by the traditional rounding scheme. Such a definition strongly over-weights small unions making it unlikely in practice but a reasonable \"upper bound\".\n",
     "\n",
-    "$$  n_\\text{votes}\\left(n_\\text{members}\\right)  \\max \\left\\{1,\\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil \\right\\}  $$\n",
+    "$$  n_\\text{votes}\\left(n_\\text{members}\\right) = \\max \\left\\{1,\\left\\lfloor\\frac{n_\\text{members}}{n_{min}}\\right\\rceil \\right\\}  $$\n",
     "        \n",
     "$$ n_\\text{votes}^T = \\sum_{\\text{locals}} n_\\text{votes}\\left(n_\\text{members}\\right) $$\n",
     "   \n",
@@ -1093,9 +1094,7 @@
    "execution_count": 26,
    "id": "af08b538-5564-43ad-8323-361b6eb2025c",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -1364,6 +1363,14 @@
      "source_hidden": true
     }
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dac3afe-aced-44dc-ba80-fec68b5f32eb",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
